# webAgent

./: README.md  pyproject.toml
app/: main.py
app/templates/: index.html
app/utils/: playwright_bot.py
