[tool.poetry]
name = "webAgent"
version = "0.1.0"
description = "A FastAPI app with iframe and Playwright automation using Autogen GPT Assistant"
authors = ["Hardik Maheshwari"]
readme = ""

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
playwright = "^1.44.0"
openai = "^1.30.5"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
